--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "license": "ISC",
     "dependencies": {
         "express": "^5.1.0",
+        "joi": "^17.13.3",
         "pg": "^8.14.1",
         "sequelize": "^6.37.7"
     },
